--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,11 +4,12 @@
 
 body {
   @apply bg-slate-200 text-slate-100;
+  font-family: 'Montserrat', sans-serif;
 }
 
 
 h1 {
-    font-family: 'Montserrat', sans-serif;
+    /* font-family: 'Montserrat', sans-serif; */
     font-size: 4rem;
     font-weight: bold;
     Line-height: 1.5;
@@ -17,7 +18,7 @@ h1 {
 }
 
 h2 {
-    font-family: 'Montserrat', sans-serif;
+    /* font-family: 'Montserrat', sans-serif; */
     font-size: 3rem;
     font-weight: bold;
     Line-height: 1.4;
@@ -26,10 +27,14 @@ h2 {
 }
 
 h3 {
-    font-family: 'Montserrat', sans-serif;
+    /* font-family: 'Montserrat', sans-serif; */
     font-size: 2rem;
     font-weight: bold;
     Line-height: 1.3;
     --tw-text-opacity: 1;
     color: rgb(51 65 85 / var(--tw-text-opacity));
+}
+
+a {
+  @apply p-1 text-blue-500 hover:text-blue-300
 }
