--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,5 +36,6 @@ h3 {
 }
 
 a {
-  @apply p-1 text-blue-500 hover:text-blue-300
+  @apply transition duration-200 ease-in-out hover:text-orange-400
+  /* @apply p-1 text-blue-500 hover:text-blue-300 */
 }
