--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,6 +38,7 @@ h3 {
 }
 
 a {
-  @apply transition duration-200 ease-in-out hover:text-orange-400
+  @apply transition duration-200 ease-in-out hover:text-orange-400;
+  @apply text-slate-700;
   /* @apply p-1 text-blue-500 hover:text-blue-300 */
 }
