--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,6 +36,14 @@ h3 {
     --tw-text-opacity: 1;
     color: rgb(51 65 85 / var(--tw-text-opacity));
 }
+h4 {
+    /* font-family: 'Montserrat', sans-serif; */
+    font-size: 1rem;
+    font-weight: bold;
+    Line-height: 1.2;
+    --tw-text-opacity: 1;
+    color: rgb(51 65 85 / var(--tw-text-opacity));
+}
 
 a {
   @apply transition duration-200 ease-in-out hover:text-orange-400;
