--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,7 +16,9 @@ h1 {
     font-weight: bold;
     Line-height: 1.5;
     --tw-text-opacity: 1;
-    color: rgb(51 65 85 / var(--tw-text-opacity));
+    /* @apply text-orange-500; */
+    @apply bg-clip-text text-transparent bg-gradient-to-b  from-red-500 to-orange-500;
+    /* color: rgb(51 65 85 / var(--tw-text-opacity)); */
 }
 
 h2 {
@@ -24,8 +26,9 @@ h2 {
     font-size: 3rem;
     font-weight: bold;
     Line-height: 1.4;
+    @apply bg-clip-text text-transparent bg-gradient-to-b  from-red-500 to-orange-500;
     --tw-text-opacity: 1;
-    color: rgb(51 65 85 / var(--tw-text-opacity));
+    /* color: rgb(51 65 85 / var(--tw-text-opacity)); */
 }
 
 h3 {
@@ -33,16 +36,18 @@ h3 {
     font-size: 2rem;
     font-weight: bold;
     Line-height: 1.3;
+    @apply bg-clip-text text-transparent bg-gradient-to-b  from-red-500 to-orange-500;
     --tw-text-opacity: 1;
-    color: rgb(51 65 85 / var(--tw-text-opacity));
+    /* color: rgb(51 65 85 / var(--tw-text-opacity)); */
 }
 h4 {
     /* font-family: 'Montserrat', sans-serif; */
     font-size: 1rem;
     font-weight: bold;
     Line-height: 1.2;
+    @apply bg-clip-text text-transparent bg-gradient-to-b  from-red-500 to-orange-500;
     --tw-text-opacity: 1;
-    color: rgb(51 65 85 / var(--tw-text-opacity));
+    /* color: rgb(51 65 85 / var(--tw-text-opacity)); */
 }
 
 a {
