--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .article {
-  @apply text-sm flex sm:text-xl w-full dark:bg-slate-800 dark:text-slate-300 text-slate-700 bg-white p-4 shadow-xl sm:mt-0
+  @apply text-base flex sm:text-xl w-full dark:bg-slate-800 dark:text-slate-300 text-slate-700 bg-white p-4 shadow-xl sm:mt-0
 }
 
 .article_block {
