--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 .article {
-  @apply text-base flex sm:text-xl w-full dark:bg-slate-800 dark:text-slate-300 text-slate-700 bg-white p-4 shadow-xl sm:mt-0
+  @apply text-base flex sm:text-xl w-full dark:bg-[#2b2c2f] dark:text-slate-300 text-slate-700 bg-white p-4 shadow-xl sm:mt-0
 }
 
 .article_block {
-  @apply flex transition duration-200 ease-in-out dark:bg-slate-700 bg-slate-100 hover:bg-white dark:hover:bg-slate-600 hover:shadow-xl md:text-xl
+  @apply flex transition duration-200 ease-in-out hover:bg-white dark:hover:bg-[#3c3c3f] hover:shadow-xl md:text-xl
 }
 
 h1 {
@@ -57,7 +57,7 @@ h4 {
 a {
   @apply transition duration-200 ease-in-out hover:text-orange-400 hover:shadow-md;
   @apply dark:text-white dark:transition dark:duration-200 dark:ease-in-out dark:hover:text-orange-400;
-  @apply hover:bg-white dark:hover:bg-slate-900;
+  @apply hover:bg-white dark:hover:bg-[#4d4d4f];
   /* @apply p-1 text-blue-500 hover:text-blue-300 */
 }
 
