--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,11 +3,19 @@
 @tailwind utilities;
 
 .article {
-  @apply text-base flex sm:text-xl w-full dark:bg-[#2b2c2f] dark:text-slate-300 text-slate-700 bg-white p-4 shadow-xl sm:mt-0
+  @apply text-base flex sm:text-xl w-full dark:bg-[#2b2c2f] dark:text-slate-300 text-slate-800 bg-white p-4  sm:mt-0
 }
 
 .article_block {
   @apply flex transition duration-200 ease-in-out bg-gray-50 dark:bg-[#28282a] hover:bg-white dark:hover:bg-[#3c3c3f] hover:shadow-xl md:text-xl
+}
+
+.orange_bar_sep {
+  @apply my-2 flex h-10 items-center justify-center bg-gradient-to-b from-orange-400 from-10% via-orange-500 via-80% to-orange-500 text-xl font-bold text-slate-800 dark:bg-orange-600
+}
+
+.article_preview {
+  @apply flex transition font-bold duration-200 ease-in-out bg-gray-50 dark:bg-[#28282a] hover:bg-gray-100 dark:hover:bg-[#3c3c3f] hover:shadow-xl md:text-xl
 }
 
 h1 {
