--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,11 +7,11 @@
 }
 
 .article_block {
-  @apply flex transition duration-100 ease-in-out bg-gray-50 dark:bg-[#28282a] hover:bg-white dark:hover:bg-[#3c3c3f] border-gray-200 dark:border-black border-y-2 border-x-4 md:text-xl
+  @apply flex transition duration-100 ease-in-out bg-gray-50 dark:bg-[#28282a] hover:bg-white dark:hover:bg-[#3c3c3f] border-gray-200 dark:border-gray-900 border-y-2 border-x-4 md:text-xl
 }
 
 .orange_bar_sep {
-  @apply my-2 flex h-10 items-center justify-center bg-gradient-to-b from-orange-400 from-10% via-orange-500 via-80% to-orange-500 text-xl font-bold text-slate-800 dark:bg-orange-600
+  @apply flex h-10 items-center justify-center bg-gradient-to-b from-orange-400 from-10% via-orange-500 via-80% to-orange-500 text-xl font-bold text-slate-800 dark:bg-orange-600
 }
 
 .article_preview {
@@ -25,7 +25,7 @@ h1 {
     Line-height: 1.5;
     --tw-text-opacity: 1;
     /* @apply text-orange-500; */
-    @apply bg-clip-text text-transparent bg-gradient-to-b  from-red-600 to-orange-600;
+    @apply bg-clip-text text-transparent bg-gradient-to-b from-red-600 to-orange-600;
     @apply dark:bg-clip-text dark:text-transparent dark:bg-gradient-to-b dark:from-red-600 dark:to-orange-600;
     /* color: rgb(51 65 85 / var(--tw-text-opacity)); */
 }
@@ -35,9 +35,8 @@ h2 {
     font-size: 3rem;
     font-weight: bold;
     Line-height: 1.4;
-    @apply bg-clip-text text-transparent bg-gradient-to-b  from-red-600 to-orange-600;
-    @apply dark:bg-clip-text dark:text-transparent dark:bg-gradient-to-b dark:from-red-600 dark:to-orange-600;
-    --tw-text-opacity: 1;
+    /* @apply bg-clip-text text-transparent bg-gradient-to-b  from-red-600 to-orange-600; */
+    /* @apply dark:bg-clip-text dark:text-transparent dark:bg-gradient-to-b dark:from-red-600 dark:to-orange-600; */
     /* color: rgb(51 65 85 / var(--tw-text-opacity)); */
 }
 
@@ -46,8 +45,8 @@ h3 {
     font-size: 2rem;
     font-weight: bold;
     Line-height: 1.3;
-    @apply bg-clip-text text-transparent bg-gradient-to-b  from-red-600 to-orange-600;
-    @apply dark:bg-clip-text dark:text-transparent dark:bg-gradient-to-b dark:from-red-600 dark:to-orange-600;
+    /* @apply bg-clip-text text-transparent bg-gradient-to-b  from-red-600 to-orange-600; */
+    /* @apply dark:bg-clip-text dark:text-transparent dark:bg-gradient-to-b dark:from-red-600 dark:to-orange-600; */
     --tw-text-opacity: 1;
     /* color: rgb(51 65 85 / var(--tw-text-opacity)); */
 }
@@ -56,8 +55,8 @@ h4 {
     font-size: 1rem;
     font-weight: bold;
     Line-height: 1.2;
-    @apply bg-clip-text text-transparent bg-gradient-to-b  from-red-600 to-orange-600;
-    @apply dark:bg-clip-text dark:text-transparent dark:bg-gradient-to-b dark:from-red-600 dark:to-orange-600;
+    /* @apply bg-clip-text text-transparent bg-gradient-to-b  from-red-600 to-orange-600; */
+    /* @apply dark:bg-clip-text dark:text-transparent dark:bg-gradient-to-b dark:from-red-600 dark:to-orange-600; */
     --tw-text-opacity: 1;
     /* color: rgb(51 65 85 / var(--tw-text-opacity)); */
 }
