--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,14 +19,13 @@
 }
 
 h1 {
-    /* font-family: 'Montserrat', sans-serif; */
+    /* font-family: 'MesloLGS', sans-serif; */
     font-size: 4rem;
     font-weight: bold;
     Line-height: 1.5;
-    --tw-text-opacity: 1;
     /* @apply text-orange-500; */
-    @apply bg-clip-text text-transparent bg-gradient-to-b from-red-600 to-orange-600;
-    @apply dark:bg-clip-text dark:text-transparent dark:bg-gradient-to-b dark:from-red-600 dark:to-orange-600;
+    @apply text-orange-600;
+    @apply dark:text-orange-400;
     /* color: rgb(51 65 85 / var(--tw-text-opacity)); */
 }
 
